<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="trendingMoviesViewModel"
            type="com.example.quickflixkt.viewmodels.TrendingMoviesViewModel" />

        <variable
            name="upcomingMoviesViewModel"
            type="com.example.quickflixkt.viewmodels.UpcomingMoviesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.HomeFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/top_movie_image"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/top_movie_image"
                    />

                <TextView
                    android:id="@+id/trending_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/general_padding"
                    android:text="@string/trending_movies"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_message_trending"
                    app:visibility="@{trendingMoviesViewModel.trendingMovies.size() == 0}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trending_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:trendingMoviesListData="@{trendingMoviesViewModel.trendingMovies}"
                    app:visibility="@{trendingMoviesViewModel.trendingMovies.size() != 0}"
                    tools:itemCount="10"
                    tools:listitem="@layout/trending_movies_row_layout"/>

                <TextView
                    android:id="@+id/upcoming_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming_movies"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_message_upcoming"
                    app:visibility="@{upcomingMoviesViewModel.upcomingMovies.size() == 0}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/upcoming_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:upcomingMoviesListData="@{upcomingMoviesViewModel.upcomingMovies}"
                    app:visibility="@{upcomingMoviesViewModel.upcomingMovies.size() != 0}"
                    tools:itemCount="10"
                    tools:listitem="@layout/upcoming_movies_row" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>